added the style for textarea

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -167,7 +167,7 @@ h1,h2,h3,h4,h5,h6 {
   --bs-pagination-active-border-color: var(--bs-primary);
 }
 .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-  --bs-gutter-x: 3rem;
+  --bs-gutter-x: 10rem;
 }
 /*----------------------------------------------*/
 /* 6. SITE STRUCTURE */
@@ -629,4 +629,10 @@ a.btn-link.text-light:after {
 .videoTitle {
 word-wrap: normal;
 }
+
+textarea {
+  width: 300px;
+  height: 150px;
+}
+
 /* ============ mobile view .end// ============ */
