--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -116,12 +116,12 @@ body {
   --bs-btn-bg: #EEF5E4;
   --bs-btn-border-color: #EEF5E4;
   --bs-btn-hover-color: #222;
-  --bs-btn-hover-bg: #9de3c2;
-  --bs-btn-hover-border-color: #9de3c2;
+  --bs-btn-hover-bg: #6db593;
+  --bs-btn-hover-border-color: #6db593;
   --bs-btn-focus-shadow-rgb: 60,153,110;
   --bs-btn-active-color: #222;
-  --bs-btn-active-bg: #9de3c2;
-  --bs-btn-active-border-color: #9de3c2;
+  --bs-btn-active-bg: #6db593;
+  --bs-btn-active-border-color: #6db593;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #222;
   --bs-btn-disabled-bg: #EEF5E4;
@@ -689,4 +689,8 @@ select.form-control {
   box-shadow: none;
 }
 
+.custom-bg {
+  background-color: #6db593;
+  color: #ffffff; /* Adjust the text color if needed */
+}
 /* ============ mobile view .end// ============ */
